    No support for use in GUI, though. Turns out, a MATLAB GUI edit box can not
    display HTML links as the console does. Yair Altman managed to get down to
    switching an edit box to all-HTML rendering [Rich]. But then we'd need to
    HTMLize the whole input, not just the links. Also, findjobj would be
    necessary. See for yourself [jobj].

  - Major backend refactoring for easier maintenance, particularly
    by flattening inheritance and by separating concerns, including:
      + prepend mlunit_ prefix to classes/functions that use common names,
        because of MATLAB's global namespace for functions and classes:
        @mlunit_reflect, @mlunit_testsuite, mlunit_fail, @mlunit_gui
        (renamed from gui_test_runner)
      + retain names in order to provide compatibility with existing tests:
        test_case, test_loader, assert_*, recursive_test_run
      + @test_case restricted to being a base class template for test classes,
        separating actual test execution into @mlunit_suite_runner for now
      + @mlunit_testsuite restricted to being a simple, one-level list of test
        cases; dropped support for manually constructing multi-level test suites
      + @test_result deleted, in favor of simple struct array, and in an effort
        to separate the actual results from how they are displayed; summarizes
        result aspects from former @test_result, @text_test_result, and
        @gui_test_result
      + @mlunit_progress_listener added, as mechanism for the gui,
        or text output, or others to listen on test case execution states
      + @mlunit_gui_listener added, overtaking the update mechanisms
        from former @gui_test_result, making it obsolete
      + @gui_test_result deleted
      + @mlunit_suite_runner added, as reusable mechanism to execute
        one test suite
      + @mlunit_errorinfo centralizes all error parsing and string output
      + failures also handled by @mlunit_errorinfo
